# CLI_APOLLO

./: .gitignore  CHROMADB_Worker.py  Interface.py  LLAMA_Worker.py  MYSQL_DB_Worker.py  main.py  ollama_exceptions.py  pyproject.toml  sys_prompt.txt  test.py
Docker/: docker-compose.yml
