[project]
name = "cli-apollo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "llama-cpp-python>=0.3.14",
    "logging>=0.4.9.6",
    "mysql-connector-python>=9.5.0",
    "requests>=2.32.5",
    "rich>=14.0.0",
    "scikit-learn>=1.7.1",
    "textual>=6.2.1",
]
